<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="23sp"
        android:orientation="vertical">
        <TextView
            android:layout_marginBottom="30sp"
            android:textStyle="bold"
            android:drawableStart="@drawable/back_icon"
            android:id="@+id/go_login_from_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5sp"
            android:text="@string/back_to_login"
            android:textSize="23sp" />
        <ImageView
            android:layout_width="70sp"
            android:layout_height="70sp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher" />

        <TextView
            android:textStyle="bold"
            android:textColor="@color/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="23sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/alt_text_login"
            android:textSize="17sp"
            android:textStyle="italic"
            android:layout_marginBottom="7sp"/>


        <EditText
            android:background="@drawable/edit_text"
            android:padding="13sp"
            android:layout_marginBottom="7sp"
            android:id="@+id/email_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"/>

        <Button
            android:background="@drawable/button_ripple"
            android:textColor="@color/white"
            android:id="@+id/reset_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAllCaps="false" />
    </LinearLayout>
</RelativeLayout>