<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="23sp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/go_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/back_icon"
                android:padding="5sp"
                android:text="@string/back_to_login"
                android:textSize="23sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="70sp"
                    android:layout_height="70sp"
                    android:contentDescription="@string/logo"
                    android:scaleType="centerCrop"
                    android:src="@mipmap/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_title"
                    android:textColor="@color/black"
                    android:textSize="23sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="17sp"
                    android:text="@string/alt_text_sign_up"
                    android:textSize="17sp"
                    android:textStyle="italic" />
            </LinearLayout>


            <EditText
                android:id="@+id/name_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_name"
                android:inputType="textEmailAddress"
                android:padding="13sp"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/email_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_email"
                android:inputType="textEmailAddress"
                android:padding="13sp"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/password_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:padding="13sp"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/password_two_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_password_again_to_confirm"
                android:inputType="textPassword"
                android:padding="13sp"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/mobile_no_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/mobile_no"
                android:inputType="number"
                android:padding="13sp"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Choose your blood group :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner
                android:id="@+id/blood_group_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/blood_group_list"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <EditText

                android:id="@+id/birthday_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:clickable="true"
                android:focusable="false"
                android:hint="@string/enter_your_birth_date"
                android:inputType="date"
                android:padding="13sp"
                android:textSize="23sp" />

            <EditText
                android:id="@+id/occupation_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_your_occupation"
                android:inputType="text"
                android:padding="13sp"
                android:textSize="23sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Choose your location :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/location_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/all_location"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Are you Cancer Patient? :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/cancer_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/yes_no_array"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Are you AIDS Patient? :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/aids_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/yes_no_array"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Are you Jaundice Patient? :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />
            <Spinner

                android:id="@+id/jaundice_patient"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/yes_no_array"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Do you have other Blood effected diseases?:"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/other_Blood_effected_diseases"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/yes_no_array"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:padding="13sp"
                android:text="Are you drug addict? :"
                android:textColor="@color/black"
                android:textSize="17sp"
                android:textStyle="bold" />

            <Spinner

                android:id="@+id/drug_addicted"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/spinner"
                android:entries="@array/yes_no_array"
                android:padding="13sp"
                android:prompt="@string/enter_blood_group" />

            <EditText
                android:id="@+id/comment_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="7sp"
                android:background="@drawable/edit_text"
                android:hint="@string/enter_something_about_you"
                android:inputType="text"
                android:padding="13sp"
                android:textSize="23sp" />

            <Button
                android:id="@+id/sign_up_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/button_ripple"
                android:text="@string/sign_up_button_text"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </ScrollView>
</RelativeLayout>